--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "escort-frontend",
-  "proxy": "https://api-system-escort.herokuapp.com/",
+  "name": "corti-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "dotenv": "^14.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
