--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_BASE_URI_REST_PROD=https://api-system-escort.herokuapp.com/api/
-REACT_APP_BASE_URI_REST=http://localhost:3002/api/
+REACT_APP_BASE_URI_REST_DEV=http://localhost:3002/api/
+REACT_APP_BASE_URI_REST=http://3.138.36.90:3002/api/
 REACT_APP_AVATAR_USER=avatar.webp
